# testcmake

./: .gitignore  README.md
exemain/: CMakeLists.txt  main.cpp
libadd/: CMakeLists.txt  add.cpp  add.hpp
libdiv/: CMakeLists.txt  div.cpp  div.hpp
libsub/: CMakeLists.txt  sub.hpp
libsub/src/: sub.cpp
